--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
     align-items: center;
 }
 
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
 
 
 
@@ -58,4 +62,43 @@ nav.menu{
 
 div.account-icon{
     justify-content: flex-end;
+}
+
+/* -------MAIN------- */
+
+section.row-items{
+    margin-top: 2.5rem;
+    height: 500px;
+    border: 1px solid red;
+}
+
+article.shop-article{
+    height: 100%;
+    width: calc((100% / 3) - 1rem );
+    margin: 0 1rem;
+    border: 1px solid blue;
+
+}
+
+div.img-article{
+    width: 100%;
+    height: 85%;
+    background-color: rgb(138, 138, 66);
+}
+
+/* ARTICLE CLASS PRICE BOX */
+span.marca{
+
+}
+
+span.title-art{
+
+}
+
+span.price{
+
+}
+
+span.sale{
+
 }
