--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,18 @@ span.price{
 span.sale{
 
 }
+
+/* -------FOOTER------- */
+
+footer{
+    width: 100%;
+    height: 90px;
+    background-color: rgb(68, 68, 68);
+    margin-top: 3rem;
+}
+
+.footer-section{
+    color: white;
+    height: 100%;
+    justify-content: space-between;    
+}
