--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,6 @@
     flex-direction: column;
 }
 
-
-
 /* -------HEADER------- */
 
 header{
@@ -78,12 +76,36 @@ article.shop-article{
     margin: 0 1rem;
     border: 1px solid blue;
 
+    position: relative;
 }
 
 div.img-article{
     width: 100%;
     height: 85%;
     background-color: rgb(138, 138, 66);
+}
+
+/* DISCOUNT BOX POSITION */
+
+div.discount{
+    position: absolute;
+    left: 0;
+    bottom: 130px;
+}
+
+span.percentuale,
+span.sostenibilita{
+    color: white;
+    padding: .3rem;
+}
+
+span.percentuale{
+    background-color: red;
+    margin-right: .2rem;
+}
+
+span.sostenibilita{
+    background-color: green;
 }
 
 /* ARTICLE CLASS PRICE BOX */
