--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,9 @@
 }
 
 /* -------GENERAL------- */
-
+body{
+    font-family: 'Cabin', sans-serif;
+}
 .container{
     width: 75%;
     margin: 0 auto;
@@ -28,30 +30,41 @@
 header{
     width: 100%;
     height: 55px;
-    background-color: orange;
+    background-color: #ff6900;
 }
 
 section.nav-bar{
     height: 100%;
-    background-color: aqua;
 }
 
 nav.menu,
 div.account-icon{
     width: 30%;
     height: 100%;
-    border: 1px red solid;
 }
 
 div.main-logo{
     width: 40%;
     height: 100%;
-    border: 1px black solid;
+}
+
+div.main-logo img{
+    width: 130px;
 }
 
 section.nav-bar ul li{
-    margin: 0 .7rem;
+    margin: 0 .3rem;
     display: inline;
+}
+
+section.nav-bar ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+section.nav-bar ul li a:hover{
+    color: rgb(179, 179, 179);
+
 }
 
 nav.menu{
