--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,25 @@ span.sale{
     text-decoration: line-through;
 }
 
+/* FAVORITE HEART */
+
+div.favorite-heart{
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    top: 10px;
+    right: 0;
+
+    background-color: white;
+    font-size: 2rem;
+    border-radius: 5px 0  0 5px ;
+    cursor: pointer;
+}
+
+div.favorite-heart:hover{
+    color: red;
+}
+
 /* -------FOOTER------- */
 
 footer{
