--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ header{
     width: 100%;
     height: 55px;
     background-color: #ff6900;
+
+    position: fixed;
+    z-index: 1;
+
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,.2);
 }
 
 section.nav-bar{
@@ -76,6 +81,9 @@ div.account-icon{
 }
 
 /* -------MAIN------- */
+main{
+    padding-top: 55px
+}
 
 section.row-items{
     margin-top: 2.5rem;
